Closed
Bug 1959352
Opened 3 months ago
Closed 2 months ago
`WhiteSpaceVisibilityKeeper::NormalizeWhiteSpacesToSplitTextNodeAt()` may not retuern proper point if it deletes the last `Text` of its parent
Categories
(Core :: DOM: Editor, defect)
Core
DOM: Editor
Tracking
()
RESOLVED
FIXED
139 Branch
Tracking | Status | |
---|---|---|
firefox-esr115 | --- | unaffected |
firefox-esr128 | --- | unaffected |
firefox137 | --- | unaffected |
firefox138 | --- | disabled |
firefox139 | --- | fixed |
People
(Reporter: masayuki, Assigned: masayuki)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
I'm not sure how to reproduce this bug.
Assignee | ||
Comment 1•3 months ago
|
||
I'm not sure how to make this appear as an unexpected result. I just found
these mistakes when I was debugging bug 1959323
Depends on D244876
Pushed by masayuki@d-toybox.com:
https://hg.mozilla.org/integration/autoland/rev/fe7f9a23a421
Make `WhiteSpaceVisibilityKeeper::NormalizeWhiteSpacesToSplitTextNodeAt()` return end of its parent when it deletes a last `Text` r=m_kato
Status: ASSIGNED → RESOLVED
Closed: 2 months ago
status-firefox139:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 139 Branch
Updated•2 months ago
|
status-firefox137:
--- → unaffected
status-firefox138:
--- → disabled
status-firefox-esr115:
--- → unaffected
status-firefox-esr128:
--- → unaffected
Updated•2 months ago
|
QA Whiteboard: [qa-triage-done-c140/b139]
You need to log in
before you can comment on or make changes to this bug.
Description
•