Bug 1959352 - Make `WhiteSpaceVisibilityKeeper::NormalizeWhiteSpacesToSplitTextNodeAt()` return end of its parent when it deletes a last `Text` r=m_kato

I'm not sure how to make this appear as an unexpected result. I just found
these mistakes when I was debugging bug 1959323

Depends on D244876

Differential Revision: https://phabricator.services.mozilla.com/D244879